--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 
 <div class="container">
-<h1 class="text-uppercase">Biggest Startup event</h1>
+<h1 class="text-uppercase">Putting a Website online</h1>
 </div>
 
 <div class="button-container">
